adding manually processed papers

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -1565,6 +1565,20 @@
   timestamp = {2011.06.02},
 }
 
+@Article{Barbern2011,
+  author    = {Barberan, A. and Bates, S. T. and Casamayor, E. O. and Fierer, N.},
+  title     = {Using network analysis to explore co-occurrence patterns in soil microbial communities},
+  journal   = {ISME Journal},
+  year      = {2011},
+  volume    = {6},
+  number    = {2},
+  pages     = {343-351},
+  doi       = {10.1038/ismej.2011.119},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
 @Article{Barnes1954,
   author    = {Barnes, J. A.},
   title     = {Class and Committees in a Norwegian Island Parish},
@@ -2381,6 +2395,19 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.29},
+}
+
+@InCollection{Bomze1999,
+  author    = {Bomze, I. M. and Budinich, M. and Pardalos, P. M. and Pelillo, M.},
+  title     = {The Maximum Clique Problem},
+  booktitle = {Handbook of Combinatorial Optimization},
+  publisher = {Springer},
+  year      = {1999},
+  pages     = {1-74},
+  doi       = {10.1007/978-1-4757-3023-4_1},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
 }
 
 @Article{Bonacich1972,
@@ -3772,6 +3799,20 @@
   timestamp = {2017.06.28},
 }
 
+@Article{Chebotarev1998,
+  author    = {Chebotarev, P. and Shamis, E. V.},
+  title     = {On proximity measures for graph vertices},
+  journal   = {Automation and Remote Control},
+  year      = {1998},
+  volume    = {59},
+  number    = {10},
+  pages     = {1443-1459},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
+  url       = {https://arxiv.org/abs/math/0602073},
+}
+
 @InProceedings{Chen2009,
   author    = {Chen, J. and Zaïane, O. R. and Goebel, R.},
   title     = {Detecting Communities in Social Networks using Max-Min Modularity},
@@ -4061,7 +4102,7 @@
   pages     = {615-624},
   doi       = {10.1145/2396761.2396841},
   file      = {:Scalable clustering of signed networks using balance normalized cut.pdf:PDF},
-  groups    = {Not Found},
+  groups    = {Done Manually},
   owner     = {Vincent},
   timestamp = {2015.07.05},
 }
@@ -4521,7 +4562,7 @@
   pages     = {469-506},
   doi       = {10.1093/comnet/cnu050},
   file      = {:Synchronization over Z2 and community detection in signed multiplex networks with constraints.pdf:PDF},
-  groups    = {Not Found},
+  groups    = {Done Manually},
   owner     = {Vincent},
   timestamp = {2013.12.12},
 }
@@ -5043,6 +5084,28 @@
   timestamp = {2017.06.15},
 }
 
+@InProceedings{Dhillon2001,
+  author    = {Dhillon, I. S.},
+  title     = {Co-clustering documents and words using bipartite spectral graph partitioning},
+  booktitle = {7th ACM SIGKDD international conference on Knowledge discovery and data mining},
+  year      = {2001},
+  doi       = {10.1145/502512.502550},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
+@InProceedings{Dhillon2002,
+  author    = {Dhillon, I. S. and Guan, Y. and Kogan, J.},
+  title     = {Iterative clustering of high dimensional text data augmented by local search},
+  booktitle = {IEEE International Conference on Data Mining},
+  year      = {2002},
+  doi       = {10.1109/icdm.2002.1183895},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
 @TechReport{Dhillon2004,
   author      = {Dhillon, I. and Guan, Y. and Kulis, B.},
   title       = {A unified view of kernel kmeans, spectral clustering and graph cuts},
@@ -5188,6 +5251,20 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.30},
+}
+
+@Article{Dinsdale2008,
+  author    = {Dinsdale, E. A. and Edwards, R. A. and Hall, D. and Angly, F. and Breitbart, M. and Brulc, J. M. and Furlan, M. and Desnues, C. and Haynes, M. and Li, L. and McDaniel, L. and Moran, M. A. and Nelson, K. E. and Nilsson, C. and Olson, R. and Paul, J. and Rodriguez Brito, B. and Ruan, Y. and Swan, B. K. and Stevens, R. and Valentine, D. L. and Vega Thurber, R. and Wegley, L. and White, B. A. and Rohwer, F.},
+  title     = {Functional metagenomic profiling of nine biomes},
+  journal   = {Nature},
+  year      = {2008},
+  volume    = {452},
+  number    = {7187},
+  pages     = {629-632},
+  doi       = {10.1038/nature06810},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @Article{Doli2007,
@@ -7020,6 +7097,20 @@
   timestamp = {2017.03.27},
 }
 
+@Article{Gianoulis2009,
+  author    = {Gianoulis, T. A. and Raes, J. and Patel, P. V. and Bjornson, R. and Korbel, J. O. and Letunic, I. and Yamada, T. and Paccanaro, A. and Jensen, L. J. and Snyder, M. and Bork, P. and Gerstein, M. B.},
+  title     = {Quantifying environmental adaptation of metabolic pathways in metagenomics},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2009},
+  volume    = {106},
+  number    = {5},
+  pages     = {1374-1379},
+  doi       = {10.1073/pnas.0808022106},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
 @InProceedings{Giatsidis2011,
   author    = {Giatsidis, C. and Thilikos, D. M. and Vazirgiannis, M.},
   title     = {Evaluating Cooperation in Communities with the k-Core Structure},
@@ -7082,6 +7173,33 @@
   owner     = {Vincent},
   timestamp = {2017.07.17},
   url       = {http://eu.wiley.com/WileyCDA/WileyTitle/productCd-0471926205.html},
+}
+
+@Article{Gilbert2010,
+  author    = {Gilbert, J. A. and Field, D. and Swift, P. and Thomas, S. and Cummings, D. and Temperton, B. and Weynberg, K. and Huse, S. and Hughes, M. and Joint, I. and Somerfield, P. J. and Mühling, M.},
+  title     = {The Taxonomic and Functional Diversity of Microbes at a Temperate Coastal Site: A `Multi-Omic' Study of Seasonal and Diel Temporal Variation},
+  journal   = {PLoS One},
+  year      = {2010},
+  volume    = {5},
+  number    = {11},
+  pages     = {e15545},
+  doi       = {10.1371/journal.pone.0015545},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
+@Article{Gilbert2011,
+  author    = {Gilbert, J. A. and Steele, J. A. and Caporaso, J. G. and Steinbrück, L. and Reeder, J. and Temperton, B. and Huse, S. and McHardy, A. C. and Knight, R. and Joint, I. and Somerfield, P. and Fuhrman, J. A. and Field, D.},
+  title     = {Defining seasonal marine microbial community dynamics},
+  journal   = {ISME Journal},
+  year      = {2011},
+  volume    = {6},
+  number    = {2},
+  pages     = {298-308},
+  doi       = {10.1038/ismej.2011.107},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @Article{Giles1986,
@@ -7177,6 +7295,19 @@
   groups    = {Graph Partitioning, _To do},
   owner     = {Vincent},
   timestamp = {2017.04.17},
+}
+
+@InProceedings{Gkantsidis2003,
+  author    = {Gkantsidis, C. and Mihail, M. and Zegura, E.},
+  title     = {Spectral analysis of Internet topologies},
+  booktitle = {22nd Annual Joint Conference of the IEEE Computer and Communications},
+  year      = {2003},
+  pages     = {364-374},
+  doi       = {10.1109/INFCOM.2003.1208688},
+  file      = {:Spectral Analysis of Internet Topologies.pdf:PDF},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
 }
 
 @Article{Gleason1967,
@@ -7299,6 +7430,19 @@
   owner     = {Vincent},
   timestamp = {2017.07.14},
   url       = {http://dl.acm.org/citation.cfm?id=534133},
+}
+
+@Article{Goldberg2001,
+  author    = {Goldberg, K. and Roeder, T. and Gupta, D. and Perkins, C.},
+  title     = {Eigentaste: A Constant Time Collaborative Filtering Algorithm},
+  journal   = {Information Retrieval},
+  year      = {2001},
+  volume    = {4},
+  number    = {2},
+  pages     = {133-151},
+  doi       = {10.1023/a:1011419012209},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
 }
 
 @Article{Goldreich1998,
@@ -7467,6 +7611,20 @@
   owner     = {Vincent},
   review    = {alt. doi: 10.2307/2281536},
   timestamp = {2017.03.25},
+}
+
+@Article{Gori2010,
+  author    = {Gori, F. and Folino, G. and Jetten, M. S. M. and Marchiori, E.},
+  title     = {MTR: taxonomic annotation of short metagenomic reads using clustering at multiple taxonomic ranks},
+  journal   = {Bioinformatics},
+  year      = {2010},
+  volume    = {27},
+  number    = {2},
+  pages     = {196-203},
+  doi       = {10.1093/bioinformatics/btq649},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @Book{Gower1995,
@@ -9374,6 +9532,17 @@
   timestamp = {2017.04.12},
 }
 
+@InProceedings{Ito2005,
+  author    = {Ito, T. and Shimbo, M. and Kudo, T. and Matsumoto, Y.},
+  title     = {Application of kernels to link analysis},
+  booktitle = {11th ACM SIGKDD International conference on Knowledge discovery in data mining},
+  year      = {2005},
+  doi       = {10.1145/1081870.1081941},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
+}
+
 @Article{Jaccard1912,
   author    = {Jaccard, P.},
   title     = {The distribution of the floar in the Alpine zone},
@@ -9585,6 +9754,20 @@
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2011.03.29},
+}
+
+@Article{Jiang2012a,
+  author    = {Jiang, H. and An, L. and Lin, S. M. and Feng, G. and Qiu, Y.},
+  title     = {A Statistical Framework for Accurate Taxonomic Assignment of Metagenomic Sequencing Reads},
+  journal   = {PLoS One},
+  year      = {2012},
+  volume    = {7},
+  number    = {10},
+  pages     = {e46450},
+  doi       = {10.1371/journal.pone.0046450},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @Article{Jiang2014,
@@ -9932,6 +10115,21 @@
   timestamp = {2012.08.28},
 }
 
+@Article{Karypis1998a,
+  author    = {Karypis, G. and Kumar, V.},
+  title     = {A fast and high quality multilevel scheme for partitioning irregular graphs},
+  journal   = {SIAM Journal on Scientific Computing},
+  year      = {1998},
+  volume    = {20},
+  number    = {1},
+  pages     = {359-392},
+  doi       = {10.1137/S1064827595287997},
+  file      = {:A fast and high quality multilevel scheme for partitioning irregular graphs.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2012.08.01},
+}
+
 @Article{Kasteleyn1963,
   author    = {Kasteleyn, P. W.},
   title     = {Dimer Statistics and Phase Transitions},
@@ -10256,6 +10454,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.17},
 }
 
+@Article{Kirchman2010,
+  author    = {Kirchman, D. L. and Cottrell, M. T. and Lovejoy, C.},
+  title     = {The structure of bacterial communities in the western Arctic Ocean as revealed by pyrosequencing of 16S {rRNA} genes},
+  journal   = {Environmental Microbiology},
+  year      = {2010},
+  volume    = {12},
+  number    = {5},
+  pages     = {1132-1143},
+  doi       = {10.1111/j.1462-2920.2010.02154.x},
+  groups    = {Others},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
 @Article{Kirkpatrick1983,
   author    = {Kirkpatrick, S. and Gelatt, C. D. and Vecchi, M. P.},
   title     = {Optimization by Simulated Annealing},
@@ -10546,6 +10758,17 @@ old title: The map equation and the resolution limit in community detection},
   groups        = {Graph Partitioning, Ignored},
   owner         = {Vincent},
   timestamp     = {2017.05.10},
+}
+
+@InProceedings{Kondor2002,
+  author    = {Kondor, R. I. and Lafferty, J. D.},
+  title     = {Diffusion Kernels on Graphs and Other Discrete Input Spaces},
+  booktitle = {19th International Conference on Machine},
+  year      = {2002},
+  pages     = {315-322},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
+  url       = {http://dl.acm.org/citation.cfm?id=655996},
 }
 
 @Article{KONG2011,
@@ -10968,7 +11191,7 @@ old title: The map equation and the resolution limit in community detection},
   pages     = {559-570},
   doi       = {10.1137/1.9781611972801.49},
   file      = {:Spectral Analysis of Signed Graphs for Clustering, Prediction and Visualization.pdf:PDF},
-  groups    = {Not Found},
+  groups    = {Done Manually},
   owner     = {Vincent},
   timestamp = {2014.11.05},
 }
@@ -13526,6 +13749,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp     = {2017.06.25},
 }
 
+@Article{Meyer2008,
+  author    = {Meyer, F. and Paarmann, D. and D'Souza, M. and Olson, R. and Glass, E. M. and Kubal, M. and Paczian, T. and Rodriguez, A. and Stevens, R. and Wilke, A. and Wilkening, J. and Edwards, R. A.},
+  title     = {The metagenomics RAST server - a public resource for the automatic phylogenetic and functional analysis of metagenomes},
+  journal   = {BMC Bioinformatics},
+  year      = {2008},
+  volume    = {9},
+  number    = {1},
+  pages     = {386},
+  doi       = {10.1186/1471-2105-9-386},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
 @Book{Mezard2009,
   title     = {Information, Physics, and Computation},
   publisher = {Oxford University Press},
@@ -13690,6 +13927,20 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.08.06},
   url       = {http://trec.nist.gov/pubs/trec15/papers/uamsterdam.blog.final.pdf},
+}
+
+@Article{Mitra2011,
+  author    = {Mitra, S. and Rupek, P. and Richter, D. C. and Urich, T. and Gilbert, J. A. and Meyer, F. and Wilke, A. and Huson, D. H.},
+  title     = {Functional analysis of metagenomes and metatranscriptomes using {SEED} and {KEGG}},
+  journal   = {BMC Bioinformatics},
+  year      = {2011},
+  volume    = {12},
+  number    = {Suppl 1},
+  pages     = {S21},
+  doi       = {10.1186/1471-2105-12-s1-s21},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @Article{Mitrovic2009,
@@ -15080,6 +15331,20 @@ old title: The map equation and the resolution limit in community detection},
   url       = {http://dl.acm.org/citation.cfm?id=1534810},
 }
 
+@Article{Patel2010,
+  author    = {Patel, P. V. and Gianoulis, T. A. and Bjornson, R. D. and Yip, K. Y. and Engelman, D. M. and Gerstein, M. B.},
+  title     = {Analysis of membrane proteins in metagenomics: Networks of correlated environmental features and protein families},
+  journal   = {Genome Research},
+  year      = {2010},
+  volume    = {20},
+  number    = {7},
+  pages     = {960-971},
+  doi       = {10.1101/gr.102814.109},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
 @InCollection{Paul2004,
   author    = {Paul, T. V.},
   title     = {The enduring axioms of balance of power theory},
@@ -15678,6 +15943,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Graph Partitioning, Ignored},
   owner     = {Vincent},
   timestamp = {2010.06.03},
+}
+
+@Article{Raes2014,
+  author    = {Raes, J. and Letunic, I. and Yamada, T. and Jensen, L. J. and Bork, P.},
+  title     = {Toward molecular trait-based ecology through integration of biogeochemical, geographical and metagenomic data},
+  journal   = {Molecular Systems Biology},
+  year      = {2014},
+  volume    = {7},
+  number    = {1},
+  pages     = {473-473},
+  doi       = {10.1038/msb.2011.6},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @Article{Raghavan2007,
@@ -16293,6 +16572,19 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2011.04.04},
 }
 
+@Article{Rusch2007,
+  author    = {Rusch, D. B. and Halpern, A. L. and Sutton, G. and Heidelberg, K. B. and Williamson, S. and Yooseph, S. and Wu, D. and Eisen, J. A. and Hoffman, J. M. and Remington, K. and Beeson, K. and Tran, B. and Smith, H. and Baden-Tillson, H. and Stewart, C. and Thorpe, J. and Freeman, J. and Andrews-Pfannkoch, C. and Venter, J. E. and Li, K. and Kravitz, S. and Heidelberg, J. F. and Utterback, T. and Rogers, Y.-H. and Falcon, L. I. and Souza, V. and Bonilla-Rosso, G. and Eguiarte, L. E. and Karl, D. M. and Sathyendranath, S. and Platt, T. and Bermingham, E. and Gallardo, V. and Tamayo-Castillo, G. and Ferrari, M. R. and Strausberg, R. L. and Nealson, K. and Friedman, R. and Frazier, M. and Venter, J. C.},
+  title     = {The Sorcerer II Global Ocean Sampling Expedition: Northwest Atlantic through Eastern Tropical Pacific},
+  journal   = {PLoS Biology},
+  year      = {2007},
+  volume    = {5},
+  number    = {3},
+  pages     = {e77},
+  doi       = {10.1371/journal.pbio.0050077},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
 @Article{Russett1966,
   author    = {Russett, B. M.},
   title     = {Discovering Voting Groups in the United Nations},
@@ -16676,6 +16968,19 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@Article{Seshadri2007,
+  author    = {Seshadri, R. and Kravitz, S. A. and Smarr, L. and Gilna, P. and Frazier, M.},
+  title     = {CAMERA: A Community Resource for Metagenomics},
+  journal   = {PLoS Biology},
+  year      = {2007},
+  volume    = {5},
+  number    = {3},
+  pages     = {e75},
+  doi       = {10.1371/journal.pbio.0050075},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @Article{Sha2006,
@@ -17407,6 +17712,20 @@ old title: The map equation and the resolution limit in community detection},
   url       = {http://www.anthology.aclweb.org/D/D13/D13-1170.pdf},
 }
 
+@Article{Sogin2006,
+  author    = {Sogin, M. L. and Morrison, H. G. and Huber, J. A. and Welch, D. M. and Huse, S. M. and Neal, P. R. and Arrieta, J. M. and Herndl, G. J.},
+  title     = {Microbial diversity in the deep sea and the underexplored "rare biosphere"},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2006},
+  volume    = {103},
+  number    = {32},
+  pages     = {12115-12120},
+  doi       = {10.1073/pnas.0605127103},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
 @Article{Sokal1958,
   author    = {Sokal, R. R. and Michener, C. D.},
   title     = {A statistical method for evaluating systematic relationships},
@@ -17620,6 +17939,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.01},
+}
+
+@Article{Steele2011,
+  author    = {Steele, J. A. and Countway, P. D. and Xia, L. and Vigil, P. D. and Beman, J. M. and Kim, D. Y. and Chow, C.-E. T. and Sachdeva, R. and Jones, A. C. and Schwalbach, M. S. and Rose, J. M. and Hewson, I. and Patel, A. and Sun, F. and Caron, D. A. and Fuhrman, J. A.},
+  title     = {Marine bacterial, archaeal and protistan association networks reveal ecological linkages},
+  journal   = {ISME Journal},
+  year      = {2011},
+  volume    = {5},
+  number    = {9},
+  pages     = {1414-1425},
+  doi       = {10.1038/ismej.2011.24},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @InProceedings{Steinbach2000,
@@ -18224,6 +18557,17 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.08.02},
   url       = {http://dl.acm.org/citation.cfm?id=1610075.1610122},
+}
+
+@InProceedings{Tian2013,
+  author    = {Tian, X. and Gong, F. and Zhang, S.},
+  title     = {Detect taxonomy-specific pathway associations with environmental factors using metagenomic data},
+  booktitle = {7th International Conference on Systems Biology},
+  year      = {2013},
+  doi       = {10.1109/isb.2013.6623809},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @Article{Tibshirani2001,
@@ -19370,6 +19714,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.02},
 }
 
+@Article{White2009,
+  author    = {White, J. R. and Nagarajan, N. and Pop, M.},
+  title     = {Statistical Methods for Detecting Differentially Abundant Features in Clinical Metagenomic Samples},
+  journal   = {PLoS Computational Biology},
+  year      = {2009},
+  volume    = {5},
+  number    = {4},
+  pages     = {e1000352},
+  doi       = {10.1371/journal.pcbi.1000352},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
 @InProceedings{Wiebe2000,
   author    = {Wiebe, J.},
   title     = {Learning subjective adjectives from corpora},
@@ -19888,7 +20246,7 @@ old title: The map equation and the resolution limit in community detection},
   year      = {2014},
   doi       = {10.1109/ISB.2014.6990746},
   file      = {:Mining correlation patterns of taxa, pathways and environmental factors with an improved weighted network community detection algorithm.pdf:PDF},
-  groups    = {Not Found},
+  groups    = {Done Manually},
   owner     = {Vincent},
   timestamp = {2014.12.23},
 }
@@ -19978,6 +20336,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Found},
   owner     = {Vincent},
   timestamp = {2012.08.31},
+}
+
+@InProceedings{Yang2010,
+  author    = {Yang, B. and Peng, Y. and Leung, H. C. M. and Yiu, S. M. and Qin, J. and Li, R. and Chin, F. Y. L.},
+  title     = {MetaCluster: unsupervised binning of environmental genomic fragments and taxonomic annotation},
+  booktitle = {1st ACM International Conference on Bioinformatics and Computational Biology},
+  year      = {2010},
+  doi       = {10.1145/1854776.1854803},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @Article{Yang2011b,
@@ -20117,6 +20486,19 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.15},
+}
+
+@InCollection{Yedidia2003,
+  author    = {Yedidia, J. S. and Freeman, W. T. and Weiss, Y.},
+  title     = {Understanding belief propagation and its generalizations},
+  booktitle = {Exploring artificial intelligence in the new millennium},
+  publisher = {Morgan Kaufmann Publishers},
+  year      = {2003},
+  pages     = {239-269},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.07},
+  url       = {http://dl.acm.org/citation.cfm?id=779352},
 }
 
 @Article{Yen2011,
@@ -20595,7 +20977,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1007/978-3-642-13657-3_10},
   file          = {:Mining antagonistic communities from social networks.pdf:PDF},
-  groups        = {Graph Partitioning, Not Found},
+  groups        = {Graph Partitioning, Done Manually},
   owner         = {Vincent},
   timestamp     = {2017.05.11},
 }
@@ -20813,6 +21195,19 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Node Similarity/Distance},
   owner     = {Vincent},
   timestamp = {2016.09.27},
+}
+
+@Article{Zhou2011,
+  author    = {Zhou, J. and Deng, Y. and Luo, F. and He, Z. and Yang, Y.},
+  title     = {Phylogenetic Molecular Ecological Network of Soil Microbial Communities in Response to Elevated CO2},
+  journal   = {mBio},
+  year      = {2011},
+  volume    = {2},
+  number    = {4},
+  pages     = {e00122},
+  doi       = {10.1128/mbio.00122-11},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @InProceedings{Zhou2011a,
