first batch complete

--- a/in/bibtex/biblio.bib
+++ b/in/bibtex/biblio.bib
@@ -1993,6 +1993,20 @@
   url           = {http://dl.acm.org/citation.cfm?id=2980539.2980616},
 }
 
+@Article{Belkin2003,
+  author    = {Belkin, M. and Niyogi, P.},
+  title     = {Laplacian Eigenmaps for Dimensionality Reduction and Data Representation},
+  journal   = {Neural Computation},
+  year      = {2003},
+  volume    = {15},
+  number    = {6},
+  pages     = {1373-1396},
+  doi       = {10.1162/089976603321780317},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
 @Article{Bell1934,
   author    = {Bell, E. T.},
   title     = {Exponential Numbers},
@@ -2070,6 +2084,17 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.03},
+}
+
+@Book{Berger1988,
+  title     = {Differential Geometry: Manifolds, Curves, and Surfaces},
+  publisher = {Springer},
+  year      = {1988},
+  author    = {Berger, M. and Gostiaux, B.},
+  doi       = {10.1007/978-1-4612-1033-7},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @InProceedings{Berger-Wolf2006,
@@ -3525,6 +3550,17 @@
   timestamp = {2017.06.30},
 }
 
+@Book{Carmo1992,
+  title     = {Riemannian Geometry},
+  publisher = {Birkhäuser Basel},
+  year      = {1992},
+  author    = {do Carmo, M. P.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+  url       = {http://www.springer.com/fr/book/9780817634902},
+}
+
 @Article{Cartwright1956,
   author    = {Cartwright, D. and Harary, F.},
   title     = {Structural balance: A generalization of Heider's theory},
@@ -3950,7 +3986,7 @@
   pages         = {2221-2235},
   __markedentry = {[Vincent:]},
   file          = {:Research of community mining in signed social network based on game theory.pdf:PDF},
-  groups        = {Graph Partitioning, Not Found},
+  groups        = {Graph Partitioning, Done Manually},
   owner         = {Vincent},
   timestamp     = {2017.04.18},
   url           = {http://www.ijicic.org/ijicic-14-01008.pdf},
@@ -6838,16 +6874,47 @@
   timestamp = {2017.08.02},
 }
 
+@Book{Gallier2011,
+  title     = {Discrete Mathematics},
+  publisher = {Springer},
+  year      = {2011},
+  author    = {Gallier, J.},
+  doi       = {10.1007/978-1-4419-8047-2},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
+@Book{Gallier2011a,
+  title     = {Geometric Methods and Applications},
+  publisher = {Springer},
+  year      = {2011},
+  author    = {Gallier, J.},
+  doi       = {10.1007/978-1-4419-9961-0},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
 @TechReport{Gallier2015,
   author      = {Gallier, J.},
   title       = {Spectral Theory of Unsigned and Signed Graphs - Applications to Graph Clustering: a Survey},
   institution = {Department of Computer and Information Science, University of Pennsylvania},
   year        = {2015},
   file        = {:Spectral Theory of Unsigned and Signed Graphs Applications to Graph Clustering- a Survey.pdf:PDF},
-  groups      = {Graph Partitioning, Not Found},
+  groups      = {Graph Partitioning, Done Manually},
   owner       = {Vincent},
   timestamp   = {2015.10.09},
   url         = {http://www.cis.upenn.edu/~jean/spectral-graph-notes.pdf},
+}
+
+@Book{Gallot2004,
+  title     = {Riemannian Geometry},
+  publisher = {Springer},
+  year      = {2004},
+  author    = {Gallot, S. and Hulin, D. and Lafontaine, J.},
+  doi       = {10.1007/978-3-642-18855-8},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @InProceedings{GalOnHarel2015,
@@ -7351,6 +7418,17 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.02},
+}
+
+@Book{Godsil2001,
+  title     = {Algebraic Graph Theory},
+  publisher = {Springer},
+  year      = {2001},
+  author    = {Godsil, C. and Royle, G.},
+  doi       = {10.1007/978-1-4613-0163-9},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @Article{Goebel1974,
@@ -8916,6 +8994,17 @@
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.12},
+}
+
+@Book{Horn1990,
+  title     = {Matrix Analysis},
+  publisher = {Cambridge University Press},
+  year      = {1990},
+  author    = {Horn, R. A. and Johnson, C. R.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+  url       = {http://www.cambridge.org/us/academic/subjects/mathematics/algebra/matrix-analysis-2nd-edition?format=PB&isbn=9780521839402#qsr9kAxBofhb7lJ3.97},
 }
 
 @InProceedings{Horowitz2010,
@@ -11619,6 +11708,17 @@ old title: The map equation and the resolution limit in community detection},
   url       = {https://arxiv.org/abs/1503.02510},
 }
 
+@Book{Lee2012,
+  title     = {Introduction to Smooth Manifolds},
+  publisher = {Springer},
+  year      = {2012},
+  author    = {Lee, J. M.},
+  doi       = {10.1007/978-1-4419-9982-5},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
 @InProceedings{Lee2015,
   author    = {Lee, H.-C. and Huang, G.-X. and Wang, C.-H. and Ueng, Y.-L.},
   title     = {Iterative soft-decision decoding of Reed-Solomon codes using informed dynamic scheduling},
@@ -12700,7 +12800,7 @@ old title: The map equation and the resolution limit in community detection},
   __markedentry = {[Vincent:]},
   doi           = {10.1145/2063576.2063722},
   file          = {:Mining direct antagonistic communities in explicit trust networks.pdf:PDF},
-  groups        = {Graph Partitioning, Not Found},
+  groups        = {Graph Partitioning, Done Manually},
   owner         = {Vincent},
   timestamp     = {2017.05.11},
 }
@@ -12773,6 +12873,22 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.07.12},
+}
+
+@InCollection{Lovasz1996,
+  author    = {Lovász, L.},
+  title     = {Random Walks on Graphs: a Survey},
+  booktitle = {Combinatorics, Paul Erdos is eighty (Keszthely, 1993)},
+  publisher = {János Bolyai Mathematical Society},
+  year      = {1996},
+  volume    = {2},
+  series    = {Bolyai Soc. Math. Stud.},
+  pages     = {353-397},
+  file      = {:Random Walks on Graphs- A Survey.pdf:PDF},
+  groups    = {Ignored},
+  owner     = {Vincent},
+  timestamp = {2010.06.03},
+  url       = {http://www.cs.unibo.it/babaoglu/courses/cas/resources/tutorials/RandomWalks.pdf},
 }
 
 @Article{Lozano2007a,
@@ -14115,6 +14231,20 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.02},
 }
 
+@Article{Moretti2010,
+  author    = {Moretti, S. and Fragnelli, V. and Patrone, F. and Bonassi, S.},
+  title     = {Using coalitional games on biological networks to measure centrality and power of genes},
+  journal   = {Bioinformatics},
+  year      = {2010},
+  volume    = {26},
+  number    = {21},
+  pages     = {2721-2730},
+  doi       = {10.1093/bioinformatics/btq508},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.09},
+}
+
 @Article{Moro1997,
   author    = {Moro, J. and Burke, J. V. and Overton, M. L.},
   title     = {On the Lidskii-Vishik-Lyusternik Perturbation Theory for Eigenvalues of Matrices with Arbitrary Jordan Structure},
@@ -14914,6 +15044,17 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.07.01},
 }
 
+@Book{ONeill1983,
+  title     = {Semi-Riemannian Geometry With Applications to Relativity},
+  publisher = {Academic Press},
+  year      = {1983},
+  author    = {O'Neill, B.},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+  url       = {https://books.google.fr/books?id=CGk1eRSjFIIC&dq=Semi-Riemannian+Geometry+With+Applications+to+Relativity},
+}
+
 @Article{Onnela2005,
   author    = {Onnela, J. P. and Saramaki, J. and Kertesz, J. and Kaski, K.},
   title     = {Intensity and coherence of motifs in weighted complex networks},
@@ -15451,6 +15592,17 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.28},
+}
+
+@Book{Petersen2006,
+  title     = {Riemannian Geometry},
+  publisher = {Springer},
+  year      = {2006},
+  author    = {Petersen, P.},
+  doi       = {10.1007/978-0-387-29403-2},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
 }
 
 @Article{Pevehouse2004,
@@ -17856,6 +18008,19 @@ old title: The map equation and the resolution limit in community detection},
   timestamp = {2017.08.03},
 }
 
+@InCollection{Spielman2012,
+  author    = {Spielman, D.},
+  title     = {Spectral Graph Theory},
+  booktitle = {Combinatorial Scientific Computing},
+  publisher = {Chapman and Hall/CRC},
+  year      = {2012},
+  pages     = {495-524},
+  doi       = {10.1201/b11644-19},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+}
+
 @Article{Sporns2005,
   author    = {Sporns, O. and Tononi, G. and Kötter, R.},
   title     = {The Human Connectome: A Structural Description of the Human Brain},
@@ -19288,14 +19453,14 @@ old title: The map equation and the resolution limit in community detection},
   url       = {http://dl.acm.org/citation.cfm?id=655669},
 }
 
-@PhdThesis{Wahid2017,
+@MastersThesis{Wahid2017,
   author        = {Wahid, D. F.},
   title         = {Random models and heuristic algorithms for correlation clustering problems on signed social networks},
   year          = {2017},
-  type          = {PhD},
+  type          = {MSc Thesis},
   __markedentry = {[Vincent:]},
   file          = {:Random models and heuristic algorithms for correlation clustering problems on signed social networks.pdf:PDF},
-  groups        = {Graph Partitioning, Not Found},
+  groups        = {Graph Partitioning, Book},
   institution   = {University of British Columbia},
   owner         = {Vincent},
   timestamp     = {2017.05.09},
@@ -19625,6 +19790,20 @@ old title: The map equation and the resolution limit in community detection},
   owner     = {Vincent},
   timestamp = {2017.05.22},
   url       = {https://www.transacl.org/ojs/index.php/tacl/article/view/396},
+}
+
+@Article{Weston2004,
+  author    = {Weston, J. and Elisseeff, A. and Zhou, D. and Leslie, C. S. and Noble, W. S.},
+  title     = {Protein ranking: From local to global structure in the protein similarity network},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2004},
+  volume    = {101},
+  number    = {17},
+  pages     = {6559-6563},
+  doi       = {10.1073/pnas.0308067101},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.09},
 }
 
 @Article{White1961,
@@ -20616,6 +20795,18 @@ old title: The map equation and the resolution limit in community detection},
   timestamp     = {2017.05.10},
 }
 
+@PhdThesis{Yu2003a,
+  author    = {Yu, S. X.},
+  title     = {Computational Models of Perceptual Organization},
+  school    = {Carnegie Mellon University},
+  year      = {2003},
+  type      = {PhD Thesis},
+  groups    = {Others, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.08},
+  url       = {https://www1.icsi.berkeley.edu/~stellayu/publication/doc/YuThesis.pdf},
+}
+
 @Article{Yu2013,
   author    = {Yu, H.-F. and Hsieh, C.-J. and Si, S. and Dhillon, I. S.},
   title     = {Parallel matrix factorization for recommender systems},
@@ -21220,6 +21411,20 @@ old title: The map equation and the resolution limit in community detection},
   groups    = {Others, Ignored},
   owner     = {Vincent},
   timestamp = {2017.06.29},
+}
+
+@InProceedings{Zhou2013,
+  author    = {Zhou, L. and Cheng, C. and Lü, K. and Chen, H.},
+  title     = {Using Coalitional Games to Detect Communities in Social Networks},
+  booktitle = {International Conference on Web-Age Information Management},
+  year      = {2013},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {326-331},
+  doi       = {10.1007/978-3-642-38562-9_33},
+  file      = {:Using Coalitional Games to Detect Communities in Social Networks.pdf:PDF},
+  groups    = {Graph Partitioning, Ignored},
+  owner     = {Vincent},
+  timestamp = {2017.08.09},
 }
 
 @InProceedings{Zhou2013b,
